added cronjob script for master and tservers, modified cluster_control to abstract more the tasks for launching master and tservers in a more intelligent way, added asserts when vpc_create is set to false and no vpc ids or subnet ids are given, created a new script for the cronjobs

--- a/roles/yugabyte_setup/templates/master.j2
+++ b/roles/yugabyte_setup/templates/master.j2
@@ -1,7 +1,7 @@
 --master_addresses={{ MASTER_RPC_ADDRS | join(',') }}
 --fs_data_dirs={{ data_dir }}
---rpc_bind_addresses={{ public_dns_name }}:7100
---webserver_interface={{ public_dns_name }}
+--rpc_bind_addresses={{ public_hostname }}:7100
+--webserver_interface={{ public_hostname }}
 --placement_cloud={{ cloud }}
 --placement_region={{ region }}
 --placement_zone={{ availability_zone }}
